testdata/baselines/reference/compiler/strictBestCommonSupertype.errors.txt
strictBestCommonSupertype.tlua(3,1): error TS1434: Unexpected keyword or identifier.
strictBestCommonSupertype.tlua(3,1): error TS2304: Cannot find name 'class'.
strictBestCommonSupertype.tlua(3,7): error TS2304: Cannot find name 'Store'.
strictBestCommonSupertype.tlua(3,13): error TS2304: Cannot find name 'T'.
strictBestCommonSupertype.tlua(3,15): error TS1005: ';' expected.
strictBestCommonSupertype.tlua(3,17): error TS2304: Cannot find name 'object'.
strictBestCommonSupertype.tlua(4,12): error TS2304: Cannot find name 'K'.
strictBestCommonSupertype.tlua(4,12): error TS2558: Expected 0 type arguments, but got 1.
strictBestCommonSupertype.tlua(4,15): error TS2304: Cannot find name 'mapFn'.
strictBestCommonSupertype.tlua(4,20): error TS1005: ',' expected.
strictBestCommonSupertype.tlua(4,30): error TS2304: Cannot find name 'T'.
strictBestCommonSupertype.tlua(4,36): error TS2304: Cannot find name 'K'.
strictBestCommonSupertype.tlua(4,39): error TS1005: ',' expected.
strictBestCommonSupertype.tlua(7,14): error TS2304: Cannot find name 'Store'.
strictBestCommonSupertype.tlua(7,29): error TS2304: Cannot find name 'Store'.
strictBestCommonSupertype.tlua(14,13): error TS100034: A vararg parameter cannot have a name.


==== strictBestCommonSupertype.tlua (16 errors) ====
    // https://github.com/microsoft/typescript-go/issues/1222
    
    class Store<T = object> {
    ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~
!!! error TS2304: Cannot find name 'class'.
          ~~~~~
!!! error TS2304: Cannot find name 'Store'.
                ~
!!! error TS2304: Cannot find name 'T'.
                  ~
!!! error TS1005: ';' expected.
                    ~~~~~~
!!! error TS2304: Cannot find name 'object'.
        select<K>(mapFn: (state: T) => K) {};
               ~
!!! error TS2304: Cannot find name 'K'.
               ~
!!! error TS2558: Expected 0 type arguments, but got 1.
                  ~~~~~
!!! error TS2304: Cannot find name 'mapFn'.
                       ~
!!! error TS1005: ',' expected.
                                 ~
!!! error TS2304: Cannot find name 'T'.
                                       ~
!!! error TS2304: Cannot find name 'K'.
                                          ~
!!! error TS1005: ',' expected.
    }
    
    local store: Store = inject(Store);
                 ~~~~~
!!! error TS2304: Cannot find name 'Store'.
                                ~~~~~
!!! error TS2304: Cannot find name 'Store'.
    
    function inject<T>(token: ProviderToken<T>): T {
        return {} as T;
    }
    
    interface Type<T> extends Function {
        new (...args: any[]): T;
                ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    }
    
    type ProviderToken<T> = Type<T> | AbstractType<T>;
    
    interface AbstractType<T> extends Function {
        prototype: T;
    }
    